<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="actionOnClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="estimateHoursWork"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.main.home.check.CheckFragment">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_startWork"
            style="@style/AppButton.AccentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginBottom="16dp"
            android:layout_weight="2"
            android:onClick="@{actionOnClick::onClick}"
            android:text="@string/start_work"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/btn_checkingSufficiency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_checkingSufficiency"
            style="@style/AppButton.AccentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginBottom="16dp"
            android:layout_weight="2"
            android:onClick="@{actionOnClick::onClick}"
            android:text="@string/checking_sufficiency"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/estimate_hours_work"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6">

            <ImageButton
                android:id="@+id/ib_decreaseNumber"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:backgroundTint="@color/accent_color"
                android:contentDescription="@string/decrease_number"
                android:onClick="@{actionOnClick::onClick}"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_minus_sign"
                android:tint="@color/white" />

            <TextView
                android:id="@+id/tv_estimateHoursWork"
                android:layout_width="@dimen/_48sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@{String.valueOf(estimateHoursWork)}"
                android:textAlignment="center"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ib_increaseNumber"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:backgroundTint="@color/accent_color"
                android:contentDescription="@string/increase_number"
                android:onClick="@{actionOnClick::onClick}"
                android:src="@drawable/ic_baseline_add_24"
                android:tint="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/write_what_you_will_use"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/optional"
            android:textSize="@dimen/_10ssp"
            android:alpha="0.8"
            app:layout_constraintStart_toStartOf="@+id/et_checkDescription"
            app:layout_constraintTop_toBottomOf="@+id/et_checkDescription" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_checkDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:gravity="top"
            android:background="@drawable/bg_round_edge_gray"
            android:lines="10"
            android:padding="@dimen/_4sdp"
            android:maxLines="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>